[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Enemies/spider_walk1.png" type="Texture" id=1]
[ext_resource path="res://assets/Enemies/spider_walk2.png" type="Texture" id=2]
[ext_resource path="res://BigEnemy.gd" type="Script" id=3]
[ext_resource path="res://assets/Enemies/spider_dead.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 36.5, 24.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.5, 2.25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3.25, 21.75 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 19.5, 2.25 )

[node name="BigEnemy" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 33
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 2 )

[node name="FloorChecker" type="RayCast2D" parent="."]
position = Vector2( -36, 23 )
enabled = true
cast_to = Vector2( 0, 27 )
collision_mask = 2

[node name="WallCheckerRight" type="RayCast2D" parent="."]
position = Vector2( 24, 0 )
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="WallCheckerLeft" type="RayCast2D" parent="."]
position = Vector2( -24, 0 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 25 )
collision_mask = 2

[node name="PlayerTopChecker" type="Area2D" parent="."]
position = Vector2( 54, 75 )
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerTopChecker"]
position = Vector2( -53.5, -99.75 )
shape = SubResource( 3 )

[node name="PlayerSidesChecker" type="Area2D" parent="."]
position = Vector2( 54, 75 )
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerSidesChecker"]
position = Vector2( -19, -72 )
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerSidesChecker"]
position = Vector2( -88, -72 )
shape = SubResource( 4 )

[node name="PlayerBottomChecker" type="Area2D" parent="."]
position = Vector2( 54, 75 )
collision_layer = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerBottomChecker"]
position = Vector2( -56, -53 )
shape = SubResource( 5 )

[connection signal="body_entered" from="PlayerTopChecker" to="." method="_on_PlayerTopChecker_body_entered"]
[connection signal="body_entered" from="PlayerSidesChecker" to="." method="_on_PlayerSidesChecker_body_entered"]
[connection signal="body_entered" from="PlayerBottomChecker" to="." method="_on_PlayerBottomChecker_body_entered"]
